--- a/styles/general.css
+++ b/styles/general.css
@@ -3,3 +3,44 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-family: sans-serif;
+    font-size: 1vw;
+}
+
+div#start {
+    height: 100vh;
+    width: 100%;
+    background: url('../images/start.png') no-repeat center / cover;
+
+/***************************************
+    background-blend-mode: multiply;
+    background-color: #00000055; 
+***************************************/
+}
+
+div#start::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    opacity: .5;
+}
+div#start::after {
+    content: "TAN Z S";
+    color: #fff;
+    font-size: 4rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: 0 0 1rem #fff;
+    letter-spacing: .5rem;
+    word-spacing: 1rem;
+}
+
+
