--- a/styles/general.css
+++ b/styles/general.css
@@ -9,15 +9,18 @@ html {
     font-size: 1vw;
 }
 
+body {
+    background: #1b141b;
+}
+
+
+/************************/
+/****    startImg    ****/
+
 div#start {
     height: 100vh;
     width: 100%;
-    background: url('../images/start.png') no-repeat center / cover;
-
-/***************************************
-    background-blend-mode: multiply;
-    background-color: #00000055; 
-***************************************/
+    background: url("../images/start-1920W.jpg") no-repeat center / cover;
 }
 
 div#start::before {
@@ -27,9 +30,10 @@ div#start::before {
     left: 0;
     height: 100vh;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background: #000;
     opacity: .5;
 }
+
 div#start::after {
     content: "TAN Z S";
     color: #fff;
@@ -38,9 +42,62 @@ div#start::after {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-shadow: 0 0 1rem #fff;
+    text-shadow: 0 0 .5rem #fff;
     letter-spacing: .5rem;
     word-spacing: 1rem;
+    font-family: 'Roboto Slab';
 }
+
+/****    startImg    ****/
+/************************/
+
+
+/********************/
+/****    logo    ****/
+
+header {
+    max-width: 980px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+div#logo {
+    height: 9.7rem;
+    width: 40rem;
+    max-height: 97px;
+    max-width: 400px;
+    background: url("../images/logo.png") no-repeat center / contain;
+    margin: 2%;
+}
+
+/****    logo    ****/
+/********************/
+
+/*************************/
+/****    webDesign    ****/
+
+section#webDesign {
+    margin: 0 2% 2%;
+    height: 30rem;
+    box-shadow:  0 0 2rem #ddd;
+    border-radius: 3rem;
+    position: relative;
+}
+
+section#webDesign a {
+    font-size: 4rem;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: 0 0 .5rem #fff;
+    font-family: 'Roboto Slab';
+}
+
+/****    webDesign    ****/
+/*************************/
+
+
 
 
